# manufacturing_agent

./: .gitignore  README.md  requirements.txt
backend/: agent.py  main.py
backend/skills/: __init__.py  approval.py  cad.py  drawings.py  images.py  jlcpcb_skills.py  providers.py  viewers.py
backend/skills/jlcpc-browser/: .gitignore  pyproject.toml
backend/skills/jlcpc-browser/src/jlcpc_browser/: __init__.py  __main__.py  discovery.py
backend/skills/jlcpc-browser/src/jlcpc_browser/agent/: runner.py  task.py
backend/skills/jlcpc-browser/src/jlcpc_browser/context/: __init__.py  part_brief.py
backend/skills/jlcpc-browser/src/jlcpc_browser/pipeline/: run.py
frontend/: app.js  index.html  styles.css
